[gd_scene load_steps=23 format=2]

[ext_resource path="res://ASSETS/industrias/Sprites/bg.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/industrias/Sprites/buildings.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/industrias/Sprites/skill-foreground.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/industrias/Sprites/far-buildings.png" type="Texture" id=4]
[ext_resource path="res://assets/hf-free-complete/futile-pro-v1/FutilePro.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/Game Over.gd" type="Script" id=6]
[ext_resource path="res://player/back-jump/back-jump-3.png" type="Texture" id=7]
[ext_resource path="res://player/back-jump/back-jump-2.png" type="Texture" id=8]
[ext_resource path="res://player/hurt/hurt.png" type="Texture" id=9]
[ext_resource path="res://player/climb/climb-4.png" type="Texture" id=10]
[ext_resource path="res://Scenes/PanelContainer.gd" type="Script" id=11]
[ext_resource path="res://ASSETS/Fire-Skull-Files/PNG/fire-skull.png" type="Texture" id=12]
[ext_resource path="res://Fonts/ManaFont.tres" type="DynamicFont" id=13]
[ext_resource path="res://Sounds/sonido-de-desaparecer.mp3" type="AudioStream" id=14]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
resource_name = "Dead"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 733, 568 ), Vector2( 715.2, 574.2 ), Vector2( 672, 576 ), Vector2( 647, 641 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 730, 595 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "calaca"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=7]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 848, 176 ), Vector2( 848, 176 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "calaca"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[node name="Game Over" type="Node2D"]
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -28.0
margin_top = -17.0
margin_right = 1305.0
margin_bottom = 743.0
color = Color( 0, 0, 0, 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 720, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2( 376, 389 )
scale = Vector2( 2.93072, 5.08798 )
texture = ExtResource( 1 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 720, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 544, 162 )
scale = Vector2( 5.22827, 4.94944 )
texture = ExtResource( 4 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 720, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 467, 288 )
scale = Vector2( 4.68753, 5.0976 )
texture = ExtResource( 2 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 720, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 444, 475 )
scale = Vector2( 3.25643, 4.96875 )
texture = ExtResource( 3 )

[node name="DeadMenu" type="PanelContainer" parent="."]
self_modulate = Color( 0.890196, 0.0392157, 0.960784, 1 )
margin_left = 556.0
margin_top = 303.0
margin_right = 732.0
margin_bottom = 393.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 11 )

[node name="VBoxContainer" type="VBoxContainer" parent="DeadMenu"]
margin_left = 7.0
margin_top = 7.0
margin_right = 175.0
margin_bottom = 83.0

[node name="Label" type="Label" parent="DeadMenu/VBoxContainer"]
self_modulate = Color( 0.894118, 0.976471, 0.054902, 1 )
margin_right = 168.0
margin_bottom = 28.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "GAME OVER"

[node name="Restart" type="Button" parent="DeadMenu/VBoxContainer"]
self_modulate = Color( 0.819608, 0.121569, 0.960784, 1 )
margin_top = 32.0
margin_right = 168.0
margin_bottom = 52.0
text = "NEW GAME"

[node name="Exit" type="Button" parent="DeadMenu/VBoxContainer"]
self_modulate = Color( 0.733333, 0.0588235, 0.898039, 1 )
margin_top = 56.0
margin_right = 168.0
margin_bottom = 76.0
text = "BYE N00B"

[node name="PlayerAnim" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerAnim"]
anims/Dead = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="PlayerAnim"]
position = Vector2( 730, 595 )
rotation = -1.5708
scale = Vector2( 2.50491, 2.9242 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="."]
self_modulate = Color( 0.917647, 0.0470588, 0.0470588, 1 )
margin_left = 493.0
margin_top = 122.0
margin_right = 799.0
margin_bottom = 284.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 13 )
text = "
YOU DIED
"
uppercase = true
__meta__ = {
"_editor_description_": ""
}

[node name="Calaveras" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Calaveras"]
position = Vector2( 435, 178 )
texture = ExtResource( 12 )
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Calaveras"]
anims/RESET = SubResource( 5 )
anims/calaca = SubResource( 6 )

[node name="Calaveras2" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Calaveras2"]
position = Vector2( 848, 176 )
texture = ExtResource( 12 )
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Calaveras2"]
anims/RESET = SubResource( 7 )
anims/calaca = SubResource( 8 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
pitch_scale = 0.5
